Added activity in NotifyPage

--- a/app/src/main/res/layout/activity_notify_page.xml
+++ b/app/src/main/res/layout/activity_notify_page.xml
@@ -15,7 +15,7 @@
 
 
     <Button
-        android:id="@+id/btn_add"
+        android:id="@+id/btn_addNotif"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_gravity="bottom|end"
